# stripe-report

./: .gitignore  Pipfile  README.md  main.py  pyproject.toml
.github/workflows/: send.yml  stripe-report.yml
scripts/: deploy  install  run
stripe_report/: main.py
